--- a/index.css
+++ b/index.css
@@ -75,7 +75,7 @@ li{
 a {
     color: #650F0E;
     font-family: Figtree, Poppins;
-    font-weight: 600;
+    font-weight: 400;
     text-decoration: none;
 
     font-size: 1.2rem;
@@ -107,6 +107,7 @@ nav{
     max-width: 1440px;
     padding-block: 2rem;
     margin: auto;
+    padding-inline: 1rem;
 }
 
 nav .nav-links{
@@ -145,7 +146,7 @@ nav > .login-btn {
 
 }
 .first-container{
-    max-width: 576px;
+    max-width: 600px;
 }
 .first-container > p{
     color: #ffffff;
@@ -305,13 +306,43 @@ img[src*='Open-chat']{
 }
 .container-3-items-l > h2{
     color: #FAFAFA;
-}
-.container-3-items-l img{
-    color: #ffffff;
+    font-size: 2rem;
+    margin-block: 0px;
 }
 
-.container-3-items-l > h4{
+
+.div > h3{
     max-width: 500px;
+    color: #650F0E;
+    margin-top: 0px;
+}
+.container-3-items-l .div{
+    display: flex;
     align-items: center;
-    color: #FAFAFA;
+    gap: .5rem;
+}
+footer{
+    
+    max-width: 1440px;
+    margin: auto;
+}
+.footer-info{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+    justify-content: center;
+    margin-block: 6rem;
+}
+footer .socials{
+    display: flex;
+    gap: 2rem;
+}
+footer img{
+    cursor: pointer;
+}
+.more-info {
+    display: flex;
+
+    gap: 1.5rem;
 }
