--- a/terms.css
+++ b/terms.css
@@ -188,6 +188,7 @@ nav{
 }
 .mobile-nav .login-btns{
     display: flex;
+    flex-direction: column;
     gap: 1rem;
 }
 .mobile-nav a:hover {
@@ -250,9 +251,11 @@ nav > .login-btn {
     margin-bottom: 2rem;
 }
 
-.prop-mgt h1{
+.first-container h1{
     color: #230606;
     text-align: center;
+    margin: auto;
+    margin-block: 2rem;
 }
 .answer h3{
     margin-block: 0px;
@@ -307,6 +310,9 @@ footer img{
         max-width: 350px;
         margin-block: 3rem;
         margin-top: 5rem;
+    }
+    h2{
+        font-size: 1.5rem;
     }
     p{
         font-size: 1em;
